--- a/src/index.html
+++ b/src/index.html
@@ -19,5 +19,53 @@
             <p class="text-[32px]">Explore the brands joining Pattern <br> Brands, the sales process & the <br>founders behind them.👇🏽</p>
         </div>
     </header>
+    <main class="bg-[#FEFBF1] text-[#703412] grid grid-rows-3 grid-cols-3 py-[100px] px-[30px]">
+        <div>
+            <img src="./IMAGE.png" alt="">
+            <p class="text-[24px] ml-[30px]">GIR: One Year In</p>
+            <p class="text-[12px] ml-[30px]">Case Study</p>
+        </div>
+        <div>
+            <img src="./IMAGE (1).png" alt="">
+            <p class="text-[24px] ml-[30px]">GIR: One Year In</p>
+            <p class="text-[12px] ml-[30px]">Case Study</p>
+        </div>
+        <div>
+            <img src="./IMAGE (2).png" alt="">
+            <p class="text-[24px] ml-[30px]">GIR: One Year In</p>
+            <p class="text-[12px] ml-[30px]">Case Study</p>
+        </div>
+        <div>
+            <img src="./IMAGE (3).png" alt="">
+            <p class="text-[24px] ml-[30px]">GIR: One Year In</p>
+            <p class="text-[12px] ml-[30px]">Case Study</p>
+        </div>
+        <div>
+            <img src="./IMAGE (1).png" alt="">
+            <p class="text-[24px] ml-[30px]">GIR: One Year In</p>
+            <p class="text-[12px] ml-[30px]">Case Study</p>
+        </div>
+        <div>
+            <img src="./IMAGE (2).png" alt="">
+            <p class="text-[24px] ml-[30px]">GIR: One Year In</p>
+            <p class="text-[12px] ml-[30px]">Case Study</p>
+        </div>
+        <div class="mt-[60px]">
+            <img src="./IMAGE.png" alt="">
+            <p class="text-[24px] ml-[30px]">GIR: One Year In</p>
+            <p class="text-[12px] ml-[30px]">Case Study</p>
+        </div>
+        <div class="mt-[60px]">
+            <img src="./IMAGE (1).png" alt="">
+            <p class="text-[24px] ml-[30px]">GIR: One Year In</p>
+            <p class="text-[12px] ml-[30px]">Case Study</p>
+        </div>
+        <div class="mt-[60px]">
+            <img src="./IMAGE.png" alt="">
+            <p class="text-[24px] ml-[30px]">GIR: One Year In</p>
+            <p class="text-[12px] ml-[30px]">Case Study</p>
+        </div>
+      
+    </main>
 </body>
 </html>
