--- a/src/index.html
+++ b/src/index.html
@@ -67,5 +67,36 @@
         </div>
       
     </main>
+
+    <footer class="bg-[#084935] text-white py-[100px]">
+        <div class="pb-[100px] px-[100px]">
+            <p class="text-[12px] mb-[30px]">CONTACT</p>
+            <p class="text-[30px]">We're focused on building brands and a better future. <br>If you'd like to partner with us, we're here to talk</p>
+        </div>
+        <section class="text-[15px] flex justify-around">
+            <div>
+                <p>Open Spaces</p>
+                <p>GIR</p>
+                <p>Letterfolk</p>
+                <p>Yield</p>
+                <p>Poketo</p>
+                <p>Equal Parts</p>
+            </div>
+            <div>
+                <p>Careers</p>
+                <p>Press</p>
+            </div>
+            <div>
+                <p>Instagram</p>
+                <p>Twitter</p>
+            </div>
+            <div>
+                <p>228 Park Ave S.</p>
+                <p>New York, NY 10003</p>
+                <p>acquisitions@patternbrands.com</p>
+            </div>
+
+        </section>
+    </footer>
 </body>
 </html>
