--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <header class="bg-[#FEFBF1] text-[#703412]">
-        <nav class=" text-[14px] flex gap-[30px] h-[10vh] items-center justify-center">
+        <nav class=" text-[14px] flex gap-[30px] h-[20vh] lg:h-[10vh] items-center justify-center">
             <p>Blog</p>
             <p>Press</p>
             <p>Join us</p>
         </nav>
-        <div class="h-[130vh] py-[100px] px-[80px] w-[80%]">
+        <div class="h-[200vh] lg:h-[130vh] py-[100px] pl-[20px] lg:px-[80px] lg:w-[80%]">
             <p class="text-[11px] mb-[20px]">BUSINESS thoughts 💭</p>
-            <p class="text-[80px] mb-[70px]">For founders on <br>building, growing, and selling your brand.</p>
-            <p class="text-[32px]">Explore the brands joining Pattern <br> Brands, the sales process & the <br>founders behind them.👇🏽</p>
+            <p class=" text-[40px] lg:text-[80px] mb-[70px]">For founders on <br>building, growing, and selling your brand.</p>
+            <p class="text-[20px] lg:text-[32px]">Explore the brands joining Pattern <br> Brands, the sales process & the <br>founders behind them.👇🏽</p>
         </div>
     </header>
 </body>
