--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
             <p class="text-[32px]">Explore the brands joining Pattern <br> Brands, the sales process & the <br>founders behind them.👇🏽</p>
         </div>
     </header>
-    <main class="bg-[#FEFBF1] text-[#703412] grid grid-rows-3 grid-cols-3 py-[100px] px-[30px]">
+    <main class="bg-[#FEFBF1] text-[#703412] lg:grid lg:grid-rows-3 lg:grid-cols-3 py-[100px] px-[30px] flex flex-col">
         <div>
             <img src="./IMAGE.png" alt="">
             <p class="text-[24px] ml-[30px]">GIR: One Year In</p>
